--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -198,7 +198,7 @@
     <div class="sidebar">
         <div>
             <h2>Coco Garden Manager</h2>
-			<h3>Manager & Staff</h3>
+			<h3>Administrator</h3>
             <ul>
                 <li><a href="./dashboard.html">Dashboard</a></li>
                 <li><a href="./messages.html">Messages <span id="message-count" style="color: red; font-weight: bold;">(2)</span></a></li>
@@ -220,7 +220,7 @@
 
     <!-- Main Content Area -->
     <div class="main-content" id="dashboard-content">
-        <h1 id="dashboard-title">Merchant Dashboard</h1>
+        <h1 id="dashboard-title">Administrator Dashboard</h1>
 
         <!-- Key Metrics Overview -->
         <div class="dashboard-cards">
