--- a/merchant/reservation_example.html
+++ b/merchant/reservation_example.html
@@ -1,3 +1,11 @@
+<!-- 
+    CSC 461: Introduction to Databases - Project Milestone 1
+	Project Name: Coco Garden Manager – A Custom Restaurant Reservation \& Ordering System
+    Team Members: Yuesong Huang, Xingzhi Ye
+    Email: yhu116@ur.rochester.edu, xye8@u.rochester.edu
+    Member ID: 1, 2
+    Team Number: 25
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -25,7 +33,7 @@
             padding-bottom: 20px;
         }
 
-        .sidebar h2 {
+        .sidebar h2, h3 {
             text-align: center;
             margin-top: 20px;
             color: #ecf0f1;
@@ -192,6 +200,7 @@
     <div class="sidebar">
         <div>
             <h2>Coco Garden Manager</h2>
+			<h3>Manager & Staff</h3>
             <ul>
                 <li><a href="./dashboard.html">Dashboard</a></li>
                 <li><a href="./messages.html">Messages <span id="message-count" style="color: red; font-weight: bold;">(2)</span></a></li>
