--- a/admin/reservation_example.html
+++ b/admin/reservation_example.html
@@ -11,7 +11,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>View Orders - Coco Garden Manager</title>
+    <title>Edit Reservation - Coco Garden Manager</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -33,7 +33,7 @@
             padding-bottom: 20px;
         }
 
-        .sidebar h2 {
+        .sidebar h2, h3 {
             text-align: center;
             margin-top: 20px;
             color: #ecf0f1;
@@ -73,26 +73,57 @@
             font-size: 28px;
         }
 
-        /* Search Bar */
-        .search-bar {
-            padding: 10px;
-            width: 300px;
-            margin-bottom: 0px;
-            border: 1px solid #bdc3c7;
-            border-radius: 5px;
+        /* Reservation Edit Form */
+        .form-section {
+            margin-top: 40px;
+            font-size: 16px;
             background-color: white;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         }
 
-        /* Orders Section */
-        .orders-table-section {
-            margin-top: 10px;
+        .form-section label {
+            display: block;
+            margin-bottom: 10px;
+            font-weight: bold;
+        }
+
+        .form-section input, .form-section select {
+            width: 100%;
+            padding: 10px;
+            margin-bottom: 20px;
+            border: 1px solid #bdc3c7;
+            border-radius: 5px;
             font-size: 16px;
         }
 
-        .scrollable {
-            max-height: 300px;
-            overflow-y: scroll;
-            margin-bottom: 20px;
+        .form-section button {
+            padding: 10px 20px;
+            background-color: #3498db;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            cursor: pointer;
+        }
+
+        .form-section button:hover {
+            background-color: #2980b9;
+        }
+
+        /* Order Section */
+        .order-section {
+            margin-top: 40px;
+            font-size: 16px;
+            background-color: white;
+            padding: 20px;
+            border-radius: 5px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+
+        .order-section h2 {
+            margin-top: 0;
+            font-size: 24px;
         }
 
         table {
@@ -114,29 +145,15 @@
             color: white;
         }
 
-        .status-placed {
-            color: #f1c40f;
-            font-weight: bold;
-        }
-
-        .status-in-progress {
-            color: #3498db;
-            font-weight: bold;
-        }
-
-        .status-completed {
-            color: #2ecc71;
-            font-weight: bold;
-        }
-
-        /* Action button for viewing order */
         .action-button {
-            padding: 5px 10px;
+            padding: 10px 20px;
             background-color: #e67e22;
             color: white;
             border: none;
             border-radius: 4px;
             cursor: pointer;
+			margin-top: 20px;
+			margin-bottom: 5px;
         }
 
         .action-button:hover {
@@ -183,13 +200,15 @@
     <div class="sidebar">
         <div>
             <h2>Coco Garden Manager</h2>
+			<h3>Administrator</h3>
             <ul>
                 <li><a href="./dashboard.html">Dashboard</a></li>
-                <li><a href="./reservations.html">Make/View Reservations</a></li>
-                <li><a href="./orders.html">View Orders</a></li>
-                <li><a href="./menu.html">View Menu</a></li>
-                <li><a href="./profile.html">Profile</a></li>
-                <li><a href="../support.html">Support</a></li>
+                <li><a href="./messages.html">Messages <span id="message-count" style="color: red; font-weight: bold;">(2)</span></a></li>
+                <li><a href="./reservations.html">View/Edit Reservations</a></li>
+                <li><a href="./orders.html">View/Edit Orders</a></li>
+                <li><a href="./menu.html">View/Edit Menu</a></li>
+                <li><a href="./inventory.html">View/Edit Inventory</a></li>
+                <li><a href="./customers.html">View/Edit Customers</a></li>
             </ul>
         </div>
 
@@ -203,51 +222,76 @@
 
     <!-- Main Content Area -->
     <div class="main-content">
-        <h1 id="orders-title">Your Orders</h1>
+        <h1 id="edit-reservation-title">Edit Reservation</h1>
 
-        <!-- Search Bar -->
-        <input type="text" id="orderSearch" class="search-bar" placeholder="Search orders..." onkeyup="searchOrders()">
+        <!-- Reservation Edit Form -->
+        <div class="form-section">
+            <label for="customer-name">Customer Name:</label>
+            <input type="text" id="customer-name" value="Jane Doe" required>
 
-        <!-- Orders Table Section -->
-        <div class="orders-table-section">
-			<h2>Passed Orders</h2>
-            <div class="scrollable">
-                <table>
-                    <thead>
-                        <tr>
-                            <th>Order ID</th>
-                            <th>Order Time</th>
-                            <th>Status</th>
-                            <th>Actions</th>
-                        </tr>
-                    </thead>
-                    <tbody id="ordersTableBody">
-                        <tr>
-                            <td>2001</td>
-                            <td>7:15 PM</td>
-                            <td class="status-completed">Completed</td>
-                            <td>
-                                <button class="action-button" onclick="viewOrderDetails(2001)">View</button>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>2002</td>
-                            <td>8:05 PM</td>
-                            <td class="status-in-progress">In Progress</td>
-                            <td>
-                                <button class="action-button" onclick="viewOrderDetails(2002)">View</button>
-                            </td>
-                        </tr>
-                    </tbody>
-                </table>
-            </div>
+            <label for="reservation-time">Reservation Time:</label>
+            <input type="time" id="reservation-time" value="19:00" required>
+
+            <label for="table-number">Table Number:</label>
+            <input type="number" id="table-number" value="5" required>
+
+            <label for="status">Reservation Status:</label>
+            <select id="status">
+                <option value="confirmed" selected>Confirmed</option>
+                <option value="pending">Pending</option>
+                <option value="completed">Completed</option>
+                <option value="cancelled">Cancelled</option>
+            </select>
+
+            <button type="submit" onclick="saveReservation()">Save Changes</button>
+        </div>
+
+        <!-- Order Section -->
+        <div class="order-section">
+            <h2>Associated Order</h2>
+
+            <table>
+                <thead>
+                    <tr>
+                        <th>Item</th>
+                        <th>Quantity</th>
+                        <th>Price</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Kung Pao Chicken</td>
+                        <td>2</td>
+                        <td>$20.00</td>
+                    </tr>
+                    <tr>
+                        <td>Spring Rolls</td>
+                        <td>3</td>
+                        <td>$9.00</td>
+                    </tr>
+                    <tr>
+                        <td>Fried Rice</td>
+                        <td>1</td>
+                        <td>$12.00</td>
+                    </tr>
+                </tbody>
+            </table>
+
+            <button class="action-button" onclick="viewOrEditOrder()">Edit Order</button>
         </div>
     </div>
 
     <!-- JavaScript functions for actions -->
     <script>
-        function viewOrderDetails(id) {
-            window.location.href = './order_view_example.html';
+        function saveReservation() {
+            alert('Reservation saved!');
+            // Redirect back to the reservations list after saving
+            window.location.href = './reservations.html';
+        }
+
+        function viewOrEditOrder() {
+            // Redirect to the order edit page
+            window.location.href = './order_example.html';
         }
 
         function logout() {
@@ -256,7 +300,7 @@
 
         function switchLanguage() {
             const elements = {
-                "orders-title": ["Your Orders", "订单"]
+                "edit-reservation-title": ["Edit Reservation", "编辑预订"]
             };
 
             for (const id in elements) {
@@ -265,15 +309,6 @@
                     el.textContent = el.textContent === elements[id][0] ? elements[id][1] : elements[id][0];
                 }
             }
-        }
-
-        function searchOrders() {
-            const filter = document.getElementById('orderSearch').value.toLowerCase();
-            const rows = document.querySelectorAll("#ordersTableBody tr");
-            rows.forEach(row => {
-                const orderId = row.cells[0].textContent.toLowerCase();
-                row.style.display = orderId.includes(filter) ? '' : 'none';
-            });
         }
     </script>
 
