--- a/admin/reservations.html
+++ b/admin/reservations.html
@@ -11,7 +11,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>View Orders - Coco Garden Manager</title>
+    <title>View/Edit Reservations - Coco Garden Manager</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -33,7 +33,7 @@
             padding-bottom: 20px;
         }
 
-        .sidebar h2 {
+        .sidebar h2, h3 {
             text-align: center;
             margin-top: 20px;
             color: #ecf0f1;
@@ -73,18 +73,8 @@
             font-size: 28px;
         }
 
-        /* Search Bar */
-        .search-bar {
-            padding: 10px;
-            width: 300px;
-            margin-bottom: 0px;
-            border: 1px solid #bdc3c7;
-            border-radius: 5px;
-            background-color: white;
-        }
-
-        /* Orders Section */
-        .orders-table-section {
+        /* Reservation Section */
+        .reservation-table-section {
             margin-top: 10px;
             font-size: 16px;
         }
@@ -114,22 +104,22 @@
             color: white;
         }
 
-        .status-placed {
-            color: #f1c40f;
-            font-weight: bold;
-        }
-
-        .status-in-progress {
-            color: #3498db;
-            font-weight: bold;
-        }
-
-        .status-completed {
+        .status-confirmed {
             color: #2ecc71;
             font-weight: bold;
         }
 
-        /* Action button for viewing order */
+        .status-pending {
+            color: #f1c40f;
+            font-weight: bold;
+        }
+
+        .status-cancelled {
+            color: #e74c3c;
+            font-weight: bold;
+        }
+
+        /* Action button for editing reservation */
         .action-button {
             padding: 5px 10px;
             background-color: #e67e22;
@@ -174,6 +164,16 @@
         .language-switch:hover {
             background-color: #2980b9;
         }
+		
+		/* Search Bar */
+        .search-bar {
+            padding: 10px;
+            width: 300px;
+            margin-bottom: 0px;
+            border: 1px solid #bdc3c7;
+            border-radius: 5px;
+            background-color: white;
+        }
 
     </style>
 </head>
@@ -183,13 +183,15 @@
     <div class="sidebar">
         <div>
             <h2>Coco Garden Manager</h2>
+			<h3>Administrator</h3>
             <ul>
                 <li><a href="./dashboard.html">Dashboard</a></li>
-                <li><a href="./reservations.html">Make/View Reservations</a></li>
-                <li><a href="./orders.html">View Orders</a></li>
-                <li><a href="./menu.html">View Menu</a></li>
-                <li><a href="./profile.html">Profile</a></li>
-                <li><a href="../support.html">Support</a></li>
+                <li><a href="./messages.html">Messages <span id="message-count" style="color: red; font-weight: bold;">(2)</span></a></li>
+                <li><a href="./reservations.html">View/Edit Reservations</a></li>
+                <li><a href="./orders.html">View/Edit Orders</a></li>
+                <li><a href="./menu.html">View/Edit Menu</a></li>
+                <li><a href="./inventory.html">View/Edit Inventory</a></li>
+                <li><a href="./customers.html">View/Edit Customers</a></li>
             </ul>
         </div>
 
@@ -203,39 +205,77 @@
 
     <!-- Main Content Area -->
     <div class="main-content">
-        <h1 id="orders-title">Your Orders</h1>
+        <h1 id="reservations-title">Reservations</h1>
+		
+		<!-- Search Bar -->
+		<input type="text" id="reservationSearch" class="search-bar" placeholder="Search reservations..." onkeyup="searchReservations()">
 
-        <!-- Search Bar -->
-        <input type="text" id="orderSearch" class="search-bar" placeholder="Search orders..." onkeyup="searchOrders()">
-
-        <!-- Orders Table Section -->
-        <div class="orders-table-section">
-			<h2>Passed Orders</h2>
+        <!-- Reservations Table -->
+        <div class="reservation-table-section">
+			<h2>Current Reservations</h2>
+			
             <div class="scrollable">
                 <table>
                     <thead>
                         <tr>
-                            <th>Order ID</th>
-                            <th>Order Time</th>
+                            <th>Reservation ID</th>
+                            <th>Customer Name</th>
+                            <th>Reservation Time</th>
+                            <th>Table Number</th>
                             <th>Status</th>
                             <th>Actions</th>
                         </tr>
                     </thead>
-                    <tbody id="ordersTableBody">
+                    <tbody id="reservationsTableBody">
                         <tr>
-                            <td>2001</td>
-                            <td>7:15 PM</td>
-                            <td class="status-completed">Completed</td>
+                            <td>1001</td>
+                            <td>Jane Doe</td>
+                            <td>7:00 PM</td>
+                            <td>5</td>
+                            <td class="status-confirmed">
+								<select>
+                                    <option value="confirmed" selected>Confirmed</option>
+									<option value="pending">Pending</option>
+									<option value="completed">Completed</option>
+									<option value="cancelled">Cancelled</option>
+                                </select>
+							</td>
                             <td>
-                                <button class="action-button" onclick="viewOrderDetails(2001)">View</button>
+                                <button class="action-button" onclick="viewOrEditReservation(1001)">Edit</button>
                             </td>
                         </tr>
                         <tr>
-                            <td>2002</td>
-                            <td>8:05 PM</td>
-                            <td class="status-in-progress">In Progress</td>
+                            <td>1002</td>
+                            <td>Michael Chan</td>
+                            <td>8:00 PM</td>
+                            <td>8</td>
+                            <td class="status-pending">
+								<select>
+                                    <option value="confirmed" selected>Confirmed</option>
+									<option value="pending">Pending</option>
+									<option value="completed">Completed</option>
+									<option value="cancelled">Cancelled</option>
+                                </select>
+							</td>
                             <td>
-                                <button class="action-button" onclick="viewOrderDetails(2002)">View</button>
+                                <button class="action-button" onclick="viewOrEditReservation(1002)">Edit</button>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>1003</td>
+                            <td>John Smith</td>
+                            <td>6:30 PM</td>
+                            <td>12</td>
+                            <td class="status-cancelled">
+								<select>
+                                    <option value="confirmed" selected>Confirmed</option>
+									<option value="pending">Pending</option>
+									<option value="completed">Completed</option>
+									<option value="cancelled">Cancelled</option>
+                                </select>
+							</td>
+                            <td>
+                                <button class="action-button" onclick="viewOrEditReservation(1003)">Edit</button>
                             </td>
                         </tr>
                     </tbody>
@@ -246,8 +286,8 @@
 
     <!-- JavaScript functions for actions -->
     <script>
-        function viewOrderDetails(id) {
-            window.location.href = './order_view_example.html';
+        function viewOrEditReservation(id) {
+            window.location.href = './reservation_example.html';
         }
 
         function logout() {
@@ -256,7 +296,7 @@
 
         function switchLanguage() {
             const elements = {
-                "orders-title": ["Your Orders", "订单"]
+                "reservations-title": ["Reservations", "预订"]
             };
 
             for (const id in elements) {
@@ -266,13 +306,13 @@
                 }
             }
         }
-
-        function searchOrders() {
-            const filter = document.getElementById('orderSearch').value.toLowerCase();
-            const rows = document.querySelectorAll("#ordersTableBody tr");
+		
+		function searchReservations() {
+            const filter = document.getElementById('reservationSearch').value.toLowerCase();
+            const rows = document.querySelectorAll("#reservationsTableBody tr");
             rows.forEach(row => {
-                const orderId = row.cells[0].textContent.toLowerCase();
-                row.style.display = orderId.includes(filter) ? '' : 'none';
+                const reservationId = row.cells[0].textContent.toLowerCase();
+                row.style.display = reservationId.includes(filter) ? '' : 'none';
             });
         }
     </script>
