--- a/customer/reservation_example.html
+++ b/customer/reservation_example.html
@@ -1,3 +1,11 @@
+<!-- 
+    CSC 461: Introduction to Databases - Project Milestone 1
+	Project Name: Coco Garden Manager – A Custom Restaurant Reservation \& Ordering System
+    Team Members: Yuesong Huang, Xingzhi Ye
+    Email: yhu116@ur.rochester.edu, xye8@u.rochester.edu
+    Member ID: 1, 2
+    Team Number: 25
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
