--- a/support.html
+++ b/support.html
@@ -1,3 +1,11 @@
+<!-- 
+    CSC 461: Introduction to Databases - Project Milestone 1
+	Project Name: Coco Garden Manager – A Custom Restaurant Reservation \& Ordering System
+    Team Members: Yuesong Huang
+    Email: yhu116@ur.rochester.edu
+    Member ID: 1
+    Team Number: 25
+-->
 <!DOCTYPE html>
 <html lang="en">
 <head>
